--- a/Elephant/main.tex
+++ b/Elephant/main.tex
@@ -186,7 +186,7 @@ There are several limitations of this paper:
 
 \section*{Acknowledgement}
 
-We would like to thank Jianyong Jin for the illustration of the elephant. We also thank ``Tailei Mao Alice" for introducing this topic to us.
+We would like to thank Jianyong Jin for the illustration of the elephant. We also thank ``Tai Le Mao Alice" for introducing this topic to us.
 
 
 % References
