--- a/Elephant/main.tex
+++ b/Elephant/main.tex
@@ -15,7 +15,7 @@
 \author[2]{Junze Yuan}
 
 \affil[1]{\textit{Research Institute for Intelligent Wearable Systems, The Hong Kong Polytechinic University}}
-\affil[2]{\textit{Tampere University}}
+\affil[2]{\textit{Faculty of Engineering and Natural Sciences, ATME, Tampere University}}
 
 \date{}
 
@@ -26,7 +26,7 @@
 
 % Abstract
 \begin{abstract}
-	In 1953, Enrico Fermi criticized Dyson’s model by quoting Johnny von Neumann: ``With four parameters I can fit an elephant, and with five I can make him wiggle his trunk." So far, there have been several attempts to fit an elephant using four parameters, but as the problem has not been well-defined, the current methods do not really satisfy the requirements. This paper defines the problem and presents an attempt.
+	In 1953, Enrico Fermi criticized Dyson’s model by quoting Johnny von Neumann: ``With four parameters I can fit an elephant, and with five I can make him wiggle his trunk." So far, there have been several attempts to fit an elephant using four parameters, but as the problem has not been well-defined, the current methods do not completely satisfy the requirements. This paper defines the problem and presents an attempt.
 \end{abstract}
 
 % Introduction
