--- a/Elephant/main.tex
+++ b/Elephant/main.tex
@@ -1,4 +1,6 @@
-\documentclass{article}
+\documentclass[letterpaper]{article}
+
+
 
 % Packages
 \usepackage{amsmath}
@@ -11,13 +13,15 @@
 
 % Document Information
 \title{Fitting an Elephant with Four non-Zero Parameters}
-\author[1]{Dian Jin\thanks{Corresponding author} }
-\author[2]{Junze Yuan}
+\author[]{Dian Jin, Junze Yuan}
 
-\affil[1]{\textit{Research Institute for Intelligent Wearable Systems, The Hong Kong Polytechinic University}}
-\affil[2]{\textit{Faculty of Engineering and Natural Sciences, ATME, Tampere University}}
+% \affil[1]{\textit{The Hong Kong Polytechinic University}}
+% \affil[2]{\textit{Tampere University}}
 
 \date{}
+
+\pagestyle{empty}
+\pagenumbering{gobble}
 
 \begin{document}
 	
@@ -181,7 +185,7 @@ There are several limitations of this paper:
 
 \section*{Acknowledgement}
 
-We would like to thank Jianyong Jin for the illustration of the elephant. We also thank ``Tai Le Mao Alice" for introducing this topic to us.
+We would like to thank Jianyong Jin for the illustration of the elephant. We also thank ``Tai Le Mao Alice" for introducing this topic.
 
 
 % References
